# semantic_segmentation_demo

./: .gitmodules  Dockerfile  README.md  pyproject.toml  run_docker_container.sh
models/SegFormer/: README.md  finetune_model.py
models/resnet-18/: README.md  test_pretrained_model.py
