[tool.poetry]
name = "semantic-segmentation-demo"
version = "0.1.0"
description = ""
authors = ["Dimitar Gueorguiev <dimitar_pg13@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.2"
transformers = "^4.42.4"
datasets = "^2.20.0"
pillow = "^10.4.0"
evaluate = "^0.4.2"
ipywidgets = "^8.1.3"
huggingface-hub = "^0.23.4"
torchvision = "0.17"
accelerate = "^0.32.1"
intel_extension_for_pytorch = { path = "./intel-extension-for-pytorch/", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
